Big on mobile seen fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -283,6 +283,12 @@ header .nav {
     .btn-join {
         display: none;
     }
+    .people-container :nth-child(1) {
+        display: none;
+    }
+    .nav-search p{
+        display: none;
+    }
 }
 
 @media screen and (min-width: 700px){
